// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`textAreaField > should render correctly 1`] = `
<DocumentFragment>
  .emotion-0 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
}

.emotion-2 {
  width: 100%;
  resize: vertical;
  background: #ffffff;
  border: 1px solid #d9dadd;
  color: #3f4250;
  border-radius: 0.25rem;
  padding: 0.75rem 0.5rem 0.75rem 1rem;
  padding-right: calc(1.5rem + 0px + 0px);
}

.emotion-2::-webkit-input-placeholder {
  color: #727683;
}

.emotion-2::-moz-placeholder {
  color: #727683;
}

.emotion-2:-ms-input-placeholder {
  color: #727683;
}

.emotion-2::placeholder {
  color: #727683;
}

.emotion-2[data-success='true'] {
  border-color: #22674e;
}

.emotion-2[data-error='true'] {
  border-color: #b3144d;
}

.emotion-2[data-readonly='true'] {
  background: #f9f9fa;
  border-color: #d9dadd;
}

.emotion-2:disabled {
  background: #f3f3f4;
  border-color: #e9eaeb;
  color: #b5b7bd;
}

.emotion-2:disabled::-webkit-input-placeholder {
  color: #b5b7bd;
}

.emotion-2:disabled::-moz-placeholder {
  color: #b5b7bd;
}

.emotion-2:disabled:-ms-input-placeholder {
  color: #b5b7bd;
}

.emotion-2:disabled::placeholder {
  color: #b5b7bd;
}

.emotion-2:not(:disabled):hover {
  border-color: #8c40ef;
}

.emotion-2:not(:disabled):focus {
  outline: none;
  border-color: #8c40ef;
  box-shadow: 0px 0px 0px 3px #8c40ef40;
}

.emotion-4 {
  position: absolute;
  top: 0.75rem;
  right: 0.5rem;
}

<div
    data-testid="testing"
  >
    <form
      novalidate=""
      style="display: contents;"
    >
      <div
        class="uv_toi52u0 uv_toi52u31 uv_toi52u2d uv_toi52u7d uv_toi52u1v uv_toi52u5d"
      >
        <label
          class="uv_17td3g91 uv_m4c9ow0 uv_m4c9ow2 uv_m4c9ow4 uv_m4c9ow6 uv_m4c9ow8 uv_m4c9owb uv_m4c9owi uv_m4c9owq uv_m4c9ow1b uv_m4c9ow20 uv_m4c9ow3c"
          for="«r0»"
        >
          Test
        </label>
        <div
          class="emotion-0 emotion-1"
        >
          <textarea
            aria-invalid="false"
            class="emotion-2 emotion-3"
            data-error="false"
            data-readonly="false"
            data-success="false"
            id="«r0»"
            name="test"
            rows="3"
          />
          <div
            class="emotion-4 emotion-5 uv_toi52u0 uv_toi52u3d uv_toi52u2j uv_toi52u7d uv_toi52u7 uv_toi52u5d"
          />
        </div>
      </div>
    </form>
  </div>
</DocumentFragment>
`;

exports[`textAreaField > should render correctly generated 1`] = `
<DocumentFragment>
  .emotion-0 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
}

.emotion-2 {
  width: 100%;
  resize: vertical;
  background: #ffffff;
  border: 1px solid #d9dadd;
  color: #3f4250;
  border-radius: 0.25rem;
  padding: 0.75rem 0.5rem 0.75rem 1rem;
  padding-right: calc(1.5rem + 300px + 0px);
}

.emotion-2::-webkit-input-placeholder {
  color: #727683;
}

.emotion-2::-moz-placeholder {
  color: #727683;
}

.emotion-2:-ms-input-placeholder {
  color: #727683;
}

.emotion-2::placeholder {
  color: #727683;
}

.emotion-2[data-success='true'] {
  border-color: #22674e;
}

.emotion-2[data-error='true'] {
  border-color: #b3144d;
}

.emotion-2[data-readonly='true'] {
  background: #f9f9fa;
  border-color: #d9dadd;
}

.emotion-2:disabled {
  background: #f3f3f4;
  border-color: #e9eaeb;
  color: #b5b7bd;
}

.emotion-2:disabled::-webkit-input-placeholder {
  color: #b5b7bd;
}

.emotion-2:disabled::-moz-placeholder {
  color: #b5b7bd;
}

.emotion-2:disabled:-ms-input-placeholder {
  color: #b5b7bd;
}

.emotion-2:disabled::placeholder {
  color: #b5b7bd;
}

.emotion-2:not(:disabled):hover {
  border-color: #8c40ef;
}

.emotion-2:not(:disabled):focus {
  outline: none;
  border-color: #8c40ef;
  box-shadow: 0px 0px 0px 3px #8c40ef40;
}

.emotion-4 {
  position: absolute;
  top: 0.75rem;
  right: 0.5rem;
}

<div
    data-testid="testing"
  >
    <form
      novalidate=""
      style="display: contents;"
    >
      <div
        class="uv_toi52u0 uv_toi52u31 uv_toi52u2d uv_toi52u7d uv_toi52u1v uv_toi52u5d"
      >
        <div
          class="uv_toi52u0 uv_toi52u3j uv_toi52u2j uv_toi52u7d uv_toi52u1v uv_toi52u5d"
        >
          <label
            class="uv_17td3g91 uv_m4c9ow0 uv_m4c9ow2 uv_m4c9ow4 uv_m4c9ow6 uv_m4c9ow8 uv_m4c9owb uv_m4c9owi uv_m4c9owq uv_m4c9ow1b uv_m4c9ow20 uv_m4c9ow3c"
            for="«r7»"
          >
            Test
          </label>
          <span
            class="uv_m4c9ow0 uv_m4c9ow2 uv_m4c9ow4 uv_m4c9ow6 uv_m4c9ow8 uv_m4c9owd uv_m4c9owi uv_m4c9owq uv_m4c9ow1b uv_m4c9ow1k uv_m4c9ow3c"
          >
            *
          </span>
        </div>
        <div
          class="emotion-0 emotion-1"
        >
          <textarea
            aria-invalid="false"
            class="emotion-2 emotion-3"
            data-error="false"
            data-readonly="false"
            data-success="false"
            id="«r7»"
            name="test"
            rows="3"
          >
            This is an example
          </textarea>
          <div
            class="emotion-4 emotion-5 uv_toi52u0 uv_toi52u3d uv_toi52u2j uv_toi52u7d uv_toi52u7 uv_toi52u5d"
          >
            <button
              aria-label="clear value"
              class="uv_e1wcoe0 uv_e1wcoe4 uv_e1wcoe6 uv_e1wcoek uv_e1wcoei uv_e1wcoed uv_e1wcoe19"
              type="button"
            >
              <svg
                class="styles__1sbwqkz0 styles_prominence_default__1sbwqkzg styles_disabled_false__1sbwqkzf styles_size_small__1sbwqkza"
                viewBox="0 0 16 16"
              >
                <path
                  d="M5.28 4.22a.75.75 0 0 0-1.06 1.06L6.94 8l-2.72 2.72a.75.75 0 1 0 1.06 1.06L8 9.06l2.72 2.72a.75.75 0 1 0 1.06-1.06L9.06 8l2.72-2.72a.75.75 0 0 0-1.06-1.06L8 6.94z"
                />
              </svg>
            </button>
          </div>
        </div>
      </div>
      <button
        class="uv_e1wcoe0 uv_e1wcoe1 uv_e1wcoe6 uv_e1wcoek uv_e1wcoeg uv_e1wcoe7 uv_e1wcoel"
        type="submit"
      >
        Submit
      </button>
    </form>
  </div>
</DocumentFragment>
`;

exports[`textAreaField > should submit with onSubmitEnter prop 1`] = `
<DocumentFragment>
  .emotion-0 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
}

.emotion-2 {
  width: 100%;
  resize: vertical;
  background: #ffffff;
  border: 1px solid #d9dadd;
  color: #3f4250;
  border-radius: 0.25rem;
  padding: 0.75rem 0.5rem 0.75rem 1rem;
  padding-right: calc(1.5rem + 0px + 0px);
}

.emotion-2::-webkit-input-placeholder {
  color: #727683;
}

.emotion-2::-moz-placeholder {
  color: #727683;
}

.emotion-2:-ms-input-placeholder {
  color: #727683;
}

.emotion-2::placeholder {
  color: #727683;
}

.emotion-2[data-success='true'] {
  border-color: #22674e;
}

.emotion-2[data-error='true'] {
  border-color: #b3144d;
}

.emotion-2[data-readonly='true'] {
  background: #f9f9fa;
  border-color: #d9dadd;
}

.emotion-2:disabled {
  background: #f3f3f4;
  border-color: #e9eaeb;
  color: #b5b7bd;
}

.emotion-2:disabled::-webkit-input-placeholder {
  color: #b5b7bd;
}

.emotion-2:disabled::-moz-placeholder {
  color: #b5b7bd;
}

.emotion-2:disabled:-ms-input-placeholder {
  color: #b5b7bd;
}

.emotion-2:disabled::placeholder {
  color: #b5b7bd;
}

.emotion-2:not(:disabled):hover {
  border-color: #8c40ef;
}

.emotion-2:not(:disabled):focus {
  outline: none;
  border-color: #8c40ef;
  box-shadow: 0px 0px 0px 3px #8c40ef40;
}

.emotion-4 {
  position: absolute;
  top: 0.75rem;
  right: 0.5rem;
}

<div
    data-testid="testing"
  >
    <form
      novalidate=""
      style="display: contents;"
    >
      <div
        class="uv_toi52u0 uv_toi52u31 uv_toi52u2d uv_toi52u7d uv_toi52u1v uv_toi52u5d"
      >
        <label
          class="uv_17td3g91 uv_m4c9ow0 uv_m4c9ow2 uv_m4c9ow4 uv_m4c9ow6 uv_m4c9ow8 uv_m4c9owb uv_m4c9owi uv_m4c9owq uv_m4c9ow1b uv_m4c9ow20 uv_m4c9ow3c"
          for="«r3»"
        >
          Test
        </label>
        <div
          class="emotion-0 emotion-1"
        >
          <textarea
            aria-invalid="false"
            class="emotion-2 emotion-3"
            data-error="false"
            data-readonly="false"
            data-success="false"
            id="«r3»"
            name="test"
            rows="3"
          >
            This is an example
          </textarea>
          <div
            class="emotion-4 emotion-5 uv_toi52u0 uv_toi52u3d uv_toi52u2j uv_toi52u7d uv_toi52u7 uv_toi52u5d"
          />
        </div>
      </div>
      <button
        class="uv_e1wcoe0 uv_e1wcoe1 uv_e1wcoe6 uv_e1wcoek uv_e1wcoeg uv_e1wcoe7 uv_e1wcoel"
        type="submit"
      >
        Submit
      </button>
    </form>
  </div>
</DocumentFragment>
`;
